--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <style>
       /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-      @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+      @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 /* Vars */
 /* Grid System */
 * {
@@ -551,7 +551,7 @@ sup {
   <!--// End Days -->
 
 </section>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/index.js"></script>
 
